# synthograsizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  FunStuff.html  PromptMetadataManager.html  README.md  REPO_MAP.md  SCHEMA.md  SynthograsizerDAW.html  about.html  daw_script.js  daw_styles.css  docker-compose.dev.yml  fractal_tree.js  guide_writingSynthograsizerJSON.md  index.html  launch-all.bat  metadata_extractor.js  package-lock.json  package.json  particle_system.js  requirements.txt  run.py  script.js  start.bat  style.css  test-navigation.html  vercel.json
.design-sync/: NOTES.md  config.json  conventions.md
.github/: pull_request_template.md
.internal/: studio-effects-verification.js
Original_SynthograsizerV0.1/: index.html  script.js  style.css
about/: index.html
app/: main.py  processors.py
backend/: ai_manager.py  config.py  google_api.py  (+5 more)
scope-synthograsizer/: README.md  SCOPE_FEEDBACK.md  pyproject.toml
scope-synthograsizer/examples/sample_workflows/: glitcher_plus_longlive.json
scope-synthograsizer/scope_synthograsizer/: __init__.py  node.py  template_engine.py  web_server.py  workflow_generator.py
scope-synthograsizer/scope_synthograsizer/pipelines/companion/: pipeline.py  schema.py
scope-synthograsizer/scope_synthograsizer/pipelines/glitcher/: pipeline.py  schema.py
scope-synthograsizer/scope_synthograsizer/pipelines/glitcher/effects/: __init__.py  color_fx.py  direction_fx.py  pixel_sort.py  slice_fx.py  spiral_fx.py  utils.py
scope-synthograsizer/tests/: test_effects.py  test_pipeline.py  test_template_engine.py
(+780 files in other folders)
