[project]
name = "scope-synthograsizer"
version = "0.1.0"
description = "Synthograsizer node for Daydream Scope — mad-libs prompt crafting, glitcher preprocessor, and p5.js video input"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-osc>=1.8",
]

[project.entry-points."scope"]
scope_synthograsizer = "scope_synthograsizer.node"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
