[project]
name = "scope-synthograsizer"
version = "0.1.0"
description = "Synthograsizer glitch-art preprocessor for Daydream Scope"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
]

[project.entry-points."scope"]
scope_synthograsizer = "scope_synthograsizer.node"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
